--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,115 @@
-body {
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,400;1,300&family=Roboto:wght@300&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+/* font-family: 'Poppins', sans-serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Playfair Display', serif;
+font-family: 'Roboto', sans-serif;
+*/
+
+/* navbar css */
+.navbar{
+  font-family: 'Poppins', sans-serif ;
+  font-size: 18px;
+  line-height: 30px;
+  text-transform: uppercase;
+  box-shadow: 0 8px 6px -6px gray;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  --webkit-box-shadow:0 8px 6px -6px gray ;
+  border-bottom: 1px solid gray !important;
+}
+.nav-link{
+  font-weight: 300 !important;
+}
+.nav-link :hover{
+  color: #000000;
+  border-bottom: 3px solid black;
+}
+.active{
+  border-bottom: 3px solid black;
+}
+.active:hover{
+  cursor: pointer;
+  
+}
+.nav-item{
+  margin-right: "50px";
+}
+.navbar-brand{
+  font-weight: 700;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 3px;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* ============== footer ===============*/
+
+.footer{
+  color: white;
+  padding: 25px;
+  background: linear-gradient(to right , #434342 , #000000);
+}
+.footer a{
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+}
+.footer a:hover{
+  cursor: pointer;
+  border-bottom: 1px solid white;
+}
+/* ================== Page Not Found ===================*/
+.pnf {
+  display: flex;
+  min-height: 65vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.pnf-title {
+  font-size: 100px;
+  font-weight: 700;
+}
+
+.pnf-heading {
+  font-weight: normal;
+}
+
+.pnf-btn {
+  color: black;
+  border: 1px solid black;
+  text-decoration: none;
+  padding: 10px;
+  margin-top: 10px;
+}
+.pnf-btn:hover {
+  background-color: black;
+  color: white;
+}
+ 
+/* =========================== Contact ====================*/
+.contactus {
+  margin: 0;
+  padding: 0;
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+/* ====================== register ===============*/
+.register{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
+  flex-direction: column;
 }
